@@ -25,7 +25,7 @@ class TestGemCommandsEnvironmentCommand < RubyGemTestCase
     assert_match %r|INSTALLATION DIRECTORY: #{@gemhome}|, @ui.output
     assert_match %r|RUBY EXECUTABLE:.*ruby|, @ui.output
     assert_match %r|RUBYGEMS PLATFORMS:|, @ui.output
-    assert_match %r|- #{Gem::Platform.local.inspect}|, @ui.output
+    assert_match %r|- #{Gem::Platform.local}|, @ui.output
     assert_match %r|GEM PATHS:|, @ui.output
     assert_match %r|- #{@gemhome}|, @ui.output
     assert_match %r|GEM CONFIGURATION:|, @ui.output
